Linux CSI Plugin and Helm Chart (#2)
* Rename package and place behind an interface

* go:build windows

* wip

* Add GetVolume method to rest interface

* Conditional build

* Add apiCall method

* Merge executeRequest into apiCall

* Initial version of cluster driver

* Health check

* Update README

* Linter fixes

* More linter fixes

* Update linters

* Update makefile

* NO-CI update workflow

Entire workflow will be skipped when any of: * The most recent commit message contains NO-CI * Changes are only to markdown files

* NO-CI Update workflow

* Common test suite functionality

* Update drivet

* NO-CI Build stoff

* NO-CI Linux driver WIP

* NO-CI Update CSI sanity, ginkgo etc

* Add rest method to list all VMs

* Use constant service name

* Use shared eventlog registration method

* List/Get VM

* linter

* Update tests

* "test" is a common make target

Tests according to architecture

* CI both components

* Fix linter issues

* Fixing

* NO-CI  check no-ci

* main for driver

* fixes

* Update build stuff

* Fix linter error

* Helm chart first cut

* apiKey and controller/node detection

* CI enhancements

* CI artifact

* Test artifacts

* build stuff

* helm lint

* backouy helm lint - site issue

* artifacts

* image build

* build image

* push

* NO-CI version command

* NO-CI version vars

* Driver version

* workflow

* Set execute bit

* Go generator to create module_embed.go

* NO-CI typo

* NO-CI Pass -NonInteractive to all powershell invocations

* NO-CI Chart adjustments
