# internal/models/rest/get_create_volume.go
@@ -1,6 +1,10 @@
 package rest
 
-type CreateVolumeResponse struct {
+// GetVolumeResponse is the response returned when a volume is created or fetched.
+type GetVolumeResponse struct {
+
+	// The name of the volume.
+	Name string `json:"name"`
 
 	// The GUID ID assigned to the volume by Hyper-V
 	ID string `json:"id"`
